# type-practice

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  dev.sh  package-lock.json  package.json  prod.sh
.scratch/type-practice/: PRD.md
.scratch/type-practice/issues/: 01-project-scaffold.md  02-segment-splitter.md  03-type-hardcoded-segment.md  04-multi-segment-unlock.md  05-hint-skip.md  06-image-unlock-results.md  07-material-library-admin.md  08-browse-play-library.md  09-url-fetch-play.md  10-llm-generate-play.md  11-configuration-page.md  12-material-view-edit.md  13-llm-word-count-range.md  14-admin-url-ai-save.md  15-typing-progress.md  16-admin-password-protection.md  16a-auth-api-admin-gate.md  16b-settings-gate-full-protection.md  16c-password-change.md  17-pinyin-mode.md  17a-pinyin-mode-tracer.md  17b-full-pinyin-engine.md  17c-pinyin-mode-polish.md  18-random-material-selection.md  (+6 more)
backend/: pyproject.toml
backend/app/: extractor.py  main.py  stats.py  store.py
backend/app/splitter/: __init__.py
backend/data/: tang300-export.json
backend/tests/: test_auth.py  test_extractor.py  test_health.py  test_materials_api.py  test_splitter.py  test_static_serving.py  test_stats.py  test_stats_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/tests/: AdminPage.test.ts  App.test.ts  HomePage.test.ts  PinyinEngine.test.ts  PlayPage.test.ts  SettingsPage.test.ts  TypingSegment.test.ts  TypingSession.test.ts  engine-hint-skip.test.ts  engine.test.ts
(+10 files in other folders)
